fixed a bug where the name of deleted cocktails from likedlist were left behind. Giving each td in the list a different key fixed this.

--- a/src/styles/LikedCocktails.css
+++ b/src/styles/LikedCocktails.css
@@ -1,55 +1,46 @@
 .list-heading {
-  padding: 20px 0 50px 15px;
+  padding: 20px 0 60px 15px;
   color: white;
 
 }
 
 table {
   table-layout: fixed;
-  width: 60%;
+  /* width: 70%; */
   border-collapse: collapse;
   color: #B31E6F;
 }
 
-thead th:nth-child(1) {
-  width: 20%;
+/* thead th:nth-child(1) {
+  width: 10%;
 }
 
 thead th:nth-child(2) {
-  width: 20%;
+  width: 50%;
 }
 
 thead th:nth-child(3) {
-  width: 20%;
+  width: 10%;
 }
 
-thead th:nth-child(3) {
-  width: 20%;
-}
+thead th:nth-child(4) {
+  width: 10%;
+} */
 
 th, td {
-  padding: 15px;
+  padding: 15px 15px;
   border-bottom: 2px solid white;
   text-align: center;
 }
 
-
-.container {
-  /* padding: 20px 100px; */
-  width: 50%;
+.container-fluid {
+  magin: 0;
+  padding: 20px 100px;
+  width: 60%;
   /* text-align: left; */
   background-color: #22EACA;
   /* text-decoration: none; */
 }
-
-/* .list-heading {
-  padding-bottom: 20px;
-  color: white;
-}
-
-thead, tbody {
-  margin: 20px;
-} */
 
 img {
   height: 80px;
