--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,7 +1,7 @@
 .nav-bar {
   overflow: hidden;
   background-color: #EE5A5A;
-  padding: 0;
+  margin: 0;
 }
 
 .nav-bar li {
